--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/websockets": "^11.1.8",
+    "@pdf-lib/fontkit": "^1.1.1",
+    "@signpdf/placeholder-pdf-lib": "^3.2.6",
+    "@signpdf/signer-p12": "^3.2.4",
+    "@signpdf/signpdf": "^3.2.5",
     "api-query-params": "^6.0.1",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -37,9 +41,11 @@
     "cookie-parser": "^1.4.7",
     "mongoose": "^8.18.2",
     "ms": "^2.1.3",
+    "node-forge": "^1.3.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
